# openAL-training

./: CMakeLists.txt  README.md
src/: main.cpp
